@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.736 2006-04-16 22:45:54 castaglia Exp $
+$Id: NEWS,v 1.737 2006-04-16 22:51:20 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -16,6 +16,7 @@ CVS
 - Bug 2721 - mod_auth_unix does not behave properly when first in AuthOrder.
 - Bug 2535 - Compare directives using integer comparisons when possible to
   improve performance.
+- Bug 2753 - CCC not closing SSL/TLS connection correctly.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
